--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "koa": "^2.2.0",
     "koa-convert": "^1.2.0",
+    "koa-cors": "^0.0.16",
     "koa-router": "^5.4.0",
     "simple-oauth2": "^1.1.0"
   },
