--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "home",
   "main": "index.js",
   "scripts": {
-    "prestart": "npm run lint",
-    "start": "cross-env HTTP=9333 babel-node ./src/server/index.js",
+    "predev": "npm run lint",
+    "dev": "cross-env HTTP=9333 nodemon ./src/server/index.js --exec babel-node",
+    "build": "babel src -d dist",
+    "serve": "cross-env HTTP=9333 node dist/server/index.js",
     "lint": "eslint ./src --ext=.js"
   },
   "author": "Markus Voss",
@@ -21,11 +23,14 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.24.0",
     "cross-env": "^3.2.4",
     "eslint": "^3.18.0",
     "eslint-config-nrk": "^5.1.0",
-    "eslint-plugin-compat": "^1.0.2"
+    "eslint-plugin-compat": "^1.0.2",
+    "nodemon": "^1.11.0"
   }
 }
