--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "simple-oauth2": "^1.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
