--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-convert": "^1.2.0",
     "koa-cors": "^0.0.16",
     "koa-router": "^5.4.0",
+    "moment": "^2.18.1",
     "simple-oauth2": "^1.1.0",
     "ws": "^2.2.3"
   },
