--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-router": "^5.4.0",
     "moment": "^2.18.1",
     "simple-oauth2": "^1.1.0",
+    "winston": "^2.3.1",
     "ws": "^3.1.0"
   },
   "devDependencies": {
